--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 
 .header {
   max-width: 100%;
-  height:100px;
   background-color: #000;              
   color: #fff;
   padding: 18px 20px;
@@ -33,6 +32,13 @@ justify-self: center;
     display: flex; 
     gap: 28px; 
     align-items: center; 
+}
+.header__divider {
+  width: 100%;
+  max-width: 100%;
+  border: none;
+  border-top: 2px solid #434343;
+  margin: 15px 0;
 }
 
 .header__link {
